@@ -2,7 +2,7 @@ TEMPLATE = app
 TARGET = merkaartor
 DESTDIR = ./release
 QT += network xml core gui
-CONFIG += release
+CONFIG += debug
 INCLUDEPATH += .
 DEPENDPATH += .
 MOC_DIR += ./GeneratedFiles/release
